模态框修改

--- a/src/pages/Modals/index.less
+++ b/src/pages/Modals/index.less
@@ -1,9 +1,9 @@
-.card-wrap{
-  Button{
-    margin: 2px;
+.cardWrapper{
+  margin: 5px;
+  button{
+    margin: 3px;
   }
 }
-
 .vertical-center-modal{
   text-align: center;
   white-space: nowrap;
