--- a/src/component/Header/index.less
+++ b/src/component/Header/index.less
@@ -1,14 +1,25 @@
 .header{
   width: calc(100%);
   .header-top{
-    height: 50px;
-    line-height: 50px;
+    line-height: 48px;
     text-align: right;
-    margin-right: 24px;
-    font-size: 14px;
+    font-size: 15px;
     a{
       color: #ff5400;
-      padding-left: 30px;
+      padding: 0 25px 0 25px;
+    }
+    img{
+      height: 38px;
+      margin: 0 8px 6px 0;
+      vertical-align: middle;
+    }
+    .meun_nav{
+      width: 100%;
+      height: 48px;
+      background: #4e9def;
+    }
+    .span_title{
+      font-size: 20px;
     }
   }
   .breadcrumb{
