--- a/src/component/Header/index.less
+++ b/src/component/Header/index.less
@@ -8,25 +8,11 @@
       color: #ff5400;
       padding: 0 25px 0 25px;
     }
-    img{
-      height: 38px;
-      margin: 0 8px 6px 0;
-      vertical-align: middle;
-    }
-    .meun_nav{
-      width: 100%;
-      height: 48px;
-      background: #4e9def;
-    }
-    .span_title{
-      font-size: 20px;
-    }
   }
   .breadcrumb{
     height: 40px;
     line-height: 40px;
     border-top: 1px solid #f9c700;
-    // background: red;
     .breadcrumb-title{
       position: relative;
       text-align: center;
@@ -55,5 +41,19 @@
         margin-right: 10px;
       }
     }
+  }
+}
+.common{
+  .header-top{
+    background: #1890ff;
+    color: #ffffff;
+  img{
+    height: 38px;
+    margin: 0 17px 6px 0;
+    vertical-align: middle;
+  }
+  .span_title{
+    font-size: 20px;
+  }
   }
 }
